Replace various uses of URL constructors.